more NEWS for 1.4.1 #996

--- a/distsrc/NEWS
+++ b/distsrc/NEWS
@@ -25,6 +25,9 @@ New features and improvements
     - Added `compressionRatio` section to `serverStatus` to report the
       compression ratio calculated on disk write.  (#989)
 
+    - Added aggregate per-index stats in output of `db.collection.stats()`
+      for sharded collections.  (#1019)
+
 
 Bug fixes
 ~~~~~~~~~
